k8s-mlops/conf/ingress.yaml
apiVersion: networking.k8s.io/v1  

kind: Ingress                      

metadata:
  name: mlflow-ingress             
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1  

spec:
  rules:                           
  - http:
      paths:
      - path: /mlflow(/|$)(.*)     # 该路径规则适用于所有以 /mlflow 开始的请求
        pathType: Prefix           
        # backend 定义了匹配该路径的请求应该转发的位置
        backend:
          service:
            # 服务的名称，这个名称必须是在同一个命名空间中有效的服务名
            name: mlflow-tracking  
            # 指定服务的端口号，请求将被转发到80端口
            port:
              number: 80           
      - path: /mlflow/static-files(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: mlflow-tracking
            port:
              number: 80
---
# 分隔符用于在一个文件中定义多个资源
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: direct-ingress             # 第二个 Ingress 资源的名称
spec:
  rules:
  - http:
      paths:
      - path: /grafana             # 定义访问 Grafana 服务的路径
        pathType: Prefix           # 前缀匹配，所有以 /grafana 开头的请求都将被匹配
        backend:
          service:
            name: grafana          # 服务名称为 grafana。
            port:
              number: 80           # Grafana 服务监听的端口
      - path: /static-files
        pathType: Prefix
        backend:
          service:
            name: mlflow-tracking  # 路径 /static-files 请求将被转发到 mlflow-tracking 服务
            port:
              number: 80
      - path: /ajax-api
        pathType: Prefix
        backend:
          service:
            name: mlflow-tracking
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: mlflow-tracking
            port:
              number: 80
      - path: /get-artifact        
        pathType: Prefix
        backend:
          service:
            name: mlflow-tracking  # 请求被转发到 mlflow-tracking 服务
            port:
              number: 80
